# ppac

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  client.Dockerfile  secretstore.Dockerfile
build_res/: Cargo.toml  configuration.rs
client/: Cargo.toml  Dockerfile  ci.Dockerfile
client/contracts/: SecretStoreAcl.sol
client/res/: SecretStoreAcl.abi
client/src/: access_policy.rs  bin.rs  client.rs  document.rs  error.rs  eth_client.rs  lib.rs  secret_store_http_client.rs
client/test_res/: circuit_no_std.zok  circuit_root.zok  circuit_std.zok  root_policy.json
client/test_res/config/: client-config.json  s1-account.json  s2-account.json  s2.pwd  s3-account.json  secretstore-config.toml.format
client/test_res/contracts/: SecretStore.abi
contracts/: README.md  package-lock.json  truffle-config.js
contracts/contracts/: GenericVerifier.sol  SecretStore.sol  SecretStoreACL.sol  SecretStoreLogger.sol  UserForTestSecretStore.sol
contracts/test/: TestCorrectProof.sol  TestGasEstimation.js  TestSecretStore1.sol  TestSecretStore2.sol  TestSecretStore3.sol
demo/: README.md  address  dev-chainspec.json  docker-compose.yml
demo/chain1/: account.pwd  config.toml  god.pwd
demo/chain2/: account.json  account.pwd  config.toml
demo/s1/: account.json  account.pwd  config.toml
demo/s2/: config.toml
demo/s3/: account.pwd  config.toml
demo/s4/: account.json  account.pwd  config.toml
demo/s5/: account.json  account.pwd  config.toml
demo/share/: alice-config.json  bob-config.json  preimage.zok
secret-store/: Cargo.toml  Dockerfile  README.md  ci.Dockerfile  server.rs
secret-store/src/: lib.rs  (+7 more)
(+178 files in other folders)
