[package]
name = "client"
version = "0.1.0"
authors = ["Erik Pohle <erik.pohle@polytechnique.edu>"]
edition = "2018"

[lib]
name = "libclient"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin.rs"

[dependencies]
hyper = "0.13.7"
tokio = { version = "0.2", features = ["full"] }
ethereum-types = "0.9.2"
futures = { version = "0.3.5", features = ["compat"] }
zokrates_core = { git = "https://github.com/ErikP0/zokrates", rev = "44645fc" }
zokrates_common = { git = "https://github.com/ErikP0/zokrates", rev = "44645fc" }
zokrates_field = { git = "https://github.com/ErikP0/zokrates", rev = "44645fc" }
tiny-keccak = "1.4"
parity-crypto = { version = "0.6", features = ["publickey"]}
itertools = "0.9.0"
rand = "0.7.3"
rustc-hex = "2.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
jsonrpc-core = "14.2.0"
jsonrpc-core-client = { version = "14.2.0", features = ["http"] }
ethabi-contract = "11.0.0"
ethabi-derive = "12.0.0"
ethabi = "12.0.0"
ethereum-tx-sign = "3.0.3"
regex = "1.3.9"
async-trait = "0.1.36"
structopt = "0.3.15"
web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "v0.13.0", features = ["http"] }
log = "0.4.11"

[dev-dependencies]
libsecp256k1 = { version = "0.3.5", default-features = false }
rlp = "0.4.5"
tokio-test = "0.2.1"
pairing_ce = "0.21"
bellman_ce = "0.3.5"
strfmt = "0.1.6"
tempdir = "0.3.7"
simple_logger = "1.6.0"

[features]
ci = [] # if set, some tests are not run that require pre-built binaries that don't work in the ci environment